add multi group support